--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
       </div>
    </header>
    <main class="container mx-auto">
+    <saction>
         <div class="text-center my-9 space-y-3">
             <h1 class="lg:text-4xl md:text-2xl text-1xl font-extrabold">Our Featured Products</h1>
             <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,<br> by injected humour, or randomised words which don't look even slightly believable. </p>
         </div>
         <div>
-            <div class="grid lg:grid-cols-4 md:grid-cols-2 grid-col-1 gap-20 ">
+            <div class="grid lg:grid-cols-4 md:grid-cols-2 grid-col-1 gap-10 ">
                 <div class="card lg:w-[300px] md:w-fit bg-[#77777733] shadow-xl p-4">
                     <figure><img src="images/tea-1.png" alt="Shoes" /></figure>
                     <div class="card-body">
@@ -73,15 +74,82 @@
                     </div>
                   </div>
                   <!-- card-4 -->
-                  <div class="card lg:w-[300px] md:w-fit  bg-[#77777733] shadow-xl p-4">
+                  <div class="card lg:w-[300px] md:w-fit bg-[#77777733] p-4 shadow-xl ">
                     <figure><img src="images/tea-4.png" alt="Shoes" /></figure>
-                    <div class="card-body">
+                    <div class="card-body -">
                       <h2 class="font-bold text-2xl text-center">Green Tea</h2>
                       <p class="text-center text-[#777]">Creamer could be replaced <br> by fresh milk</p>
                     </div>
                   </div>
             </div>
         </div>
+    </saction>
+
+    <div class="my-20 flex gap-10 flex-col lg:flex-row">
+        <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+            <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100">
+
+            </div>
+            <div class="row-span-2 flex-1 p-5 bg-red-600 rounded-lg flex justify-center items-center">
+                <img src="images/fresh-1.png" alt="">
+            </div>
+            <div class="row-span-3 flex-1 p-5 bg-red-600 rounded-lg flex justify-center items-center">
+                <img src="images/fresh-2.png" alt=""></div>
+            <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100">
+
+            </div>
+        </div>
+        <div class="space-y-8 flex-1">
+            <h1 class="lg:text-4xl text-2xl font-bold">Great Tea, Freshly <br> Presented</h1>
+            <p>The meaning of gong cha is chanese is to provide the best tea to emperor <br> from all possessions . It represents the highest quality and self expectation. <br> Establishing in 2006, Gong cha had been deeply appreciated by its custoers <br> because of good words of mouth and unique customized service orginated <br> from Taiwan.</p>
+            <h3 class="font-bold">Unique Taste</h3>
+            <p>A Unique and different style from other teapots gives a <br> luxurious and minimalist impression</p>
+            <h2 class="font-bold">Premium Quality</h2>
+            <p>Premium Quality that makes tea more  elegant and more <br> durable when you use it.</p>
+        </div>
+    </div>
+    <section class="min-h-[500px] my-24 bg-gradient-to-r from-orange-500  to-red-500">
+        <div class="flex justify-center lg:flex-row flex-col ">
+            <div class="py-20 space-y-6 text-white ">
+                <h1 class="text-[#F4F4F4] text-5xl">Meet Our Super <br> Clients</h1>
+                <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words which don't <br>look even slightly believable. </p>
+                <button class="btn bg-gradient-to-r from-sky-500  to-orange-500 bg-clip-text">Show All</button>
+            </div>
+            <div class="lg:p-40 p-20 space-y-4 relative">
+                <div>
+                <div class="bg-[#fffff71a] p-8 rounded-xl z-10">
+                <img class="width-[35px] h-[35px]  absolute -left-[-150px] -top-[-150px]" src="images/client.png" alt="">
+                <p class="text-[#777] pl-2">We are providing the best and suitable home <br> insurance services for the people who are <br> interested to treatment</p>
+                <p class="font-bold pl-2">Ilham Yuda</p>
+                <P class="text-[#777] pl-2">Businessman</P>
+                <div class="flex justify-end">
+                <img src="images/circles.png" alt="">
+            </div>
+                </div>
+                <div class="bg-[#fffff7ec] py-16 px-7 -mt-10  absolute top-140 left-[100px]">
+                    <img class="width-[35px] h-[35px]  absolute -left-[-150px] -top-[-150px]" src="images/client.png" alt="">
+                    <p class="text-[#777] pl-2">We are providing the best and suitable home <br> insurance services for the people who are <br> interested to treatment</p>
+                    <p class="font-bold pl-2">Ilham Yuda</p>
+                    <P class="text-[#777] pl-2">Businessman</P>
+                    <div class="flex justify-end">
+                    <img src="images/circles.png" alt="">
+                </div>
+                    </div>
+                    <div class="bg-[#fffff713] p-8 mt-40 rounded-xl">
+                        <img class="width-[35px] h-[35px]  absolute -left-[-150px] -top-[-150px]" src="images/client.png" alt="">
+                        <p class="text-[#777] pl-2">We are providing the best and suitable home <br> insurance services for the people who are <br> interested to treatment</p>
+                        <p class="font-bold pl-2">Ilham Yuda</p>
+                        <P class="text-[#777] pl-2">Businessman</P>
+                        <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                        </div>
+            </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </section>
    </main>
 </body>
 </html>
